# Genome

./: .gitlab-ci.yml  .rustfmt.toml  Anchor.toml  Cargo.toml  Dockerfile  README.md  makefile  package-lock.json  package.json  run_tests.sh
common/: index.ts  ixBuilder.ts  utils.ts
keys/: admin.json  attacker.json  captain.json  captain1.json  deployer.json  genome-program.json  genome.json  genome_program.json  nome.json  operator.json  organizer.json  orginizer.json  participant1.json  participant2.json  participant3.json  participant_1.json  participant_2.json  participant_3.json  platform_wallet.json  sponsor.json  test.json  token.json  uts-program.json  verifier1.json  verifier2.json  verifier3.json
migrations/: airdrop.ts  approve_token.ts  ban_token.ts  config.ts  create_tournament.ts  grant_role.ts  initialize.rs  initialize.ts  initializeOmnichain.ts  register_tournament.ts  revoke_role.ts  setBridgeFee.ts  set_bloom.ts  setup-genome.rs  setup-wallets.ts  setup_genome.ts  utils.rs  utils.ts
programs/genome-solana-contract/: Cargo.toml
programs/genome-solana-contract/derive/: Cargo.toml
programs/genome-solana-contract/derive/src/: lib.rs
programs/genome-solana-contract/src/: data.rs  error.rs  lib.rs  state.rs  team.rs  utils.rs
programs/genome-solana-contract/src/instructions/: create_tournament.rs  mod.rs  register_tournament.rs  set_bloom_precision.rs
scripts/: run_cancel_tests_single.sh  run_cancel_tests_single_all.sh  run_finish_tests_single.sh  run_finish_tests_single_all.sh  run_required_tests_omni.sh  run_required_tests_single.sh  (+3 more)
(+71 files in other folders)
