[package]
name = "genome-contract"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "genome_contract"

[features]
default = ["localnet"]
cpi = ["no-entrypoint"]
localnet = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = [
    "anchor-lang/idl-build",
    "anchor-spl/idl-build",
]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
solana-program = "1.18.17"
bincode = "1.3"
growable-bloom-filter = "2.1.1"
